--- a/gb/15/4/28/n4422014.md
+++ b/gb/15/4/28/n4422014.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fxhdff3615/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxhdff3615/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fxhdff3615/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fxhdff3615/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fxhdff3615/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>4.25上访拉开反迫害序幕 中共暴政走向解体</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/04/1104252124021030-600x400.jpg" />
 <h6>1999年4月25日，法轮功学员万人上访，要求释放天津被抓的学员以及拥有合法的炼功环境（大纪元资料库）。
 </h6>
 <hr>
-	<p>【大纪元2015年04月28日讯】（大纪元记者张顿综合报导）在法轮功学员“四?二五”万人上访16周年之际，由法轮功学员发起的<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>（退出中共的党、团、队）人数已突破<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E4%B8%A4%E4%BA%BF.md#1">两亿</a>，这是中共前党魁江泽民一意孤行、16年前发动镇压修炼“真、善、忍”的群众团体时万万没有想到的。残酷镇压不仅全面暴露了中共邪恶的本质、摧毁了中国的法制、挖空了国库，而且使中共内部四分五裂，同时中国人明白真相后纷纷退出中共组织，中共已全面走向解体。</p>
-<p><h2>全球庆贺“四?二五”和平上访及<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E4%B8%A4%E4%BA%BF.md#1">两亿</a>中国人<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a></h2>
+	<p>【大纪元2015年04月28日讯】（大纪元记者张顿综合报导）在法轮功学员“四?二五”万人上访16周年之际，由法轮功学员发起的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>（退出中共的党、团、队）人数已突破<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%A4%E4%BA%BF.md#1">两亿</a>，这是中共前党魁江泽民一意孤行、16年前发动镇压修炼“真、善、忍”的群众团体时万万没有想到的。残酷镇压不仅全面暴露了中共邪恶的本质、摧毁了中国的法制、挖空了国库，而且使中共内部四分五裂，同时中国人明白真相后纷纷退出中共组织，中共已全面走向解体。</p>
+<p><h2>全球庆贺“四?二五”和平上访及<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%A4%E4%BA%BF.md#1">两亿</a>中国人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a></h2>
 <p>时值“四?二五”及三退人数已突破两亿人之际，亚洲的香港、台湾、日本、新加坡，澳洲、美洲、欧洲等全球法轮功学员，此起彼伏地组织各种形式的纪念活动，纪念16周年前中国法轮功学员万人和平大上访及庆贺两亿中国勇士退出了中共邪恶组织。</p>
 <p>
 	<figure id="attachment_5852270" aria-describedby="caption-attachment-5852270" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/04/1504190710282384-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/04/1504190710282384-600x400.jpg" alt="台湾法轮大法学会19日在凯达格兰大道举办“纪念中国大陆法轮功学员四二五和平上访十六周年暨声援二亿人民退出中共党、团、队”活动。图为法轮大法学员演炼功法。（陈柏州/大纪元）" title="台湾法轮大法学会19日在凯达格兰大道举办“纪念中国大陆法轮功学员四二五和平上访十六周年暨声援二亿人民退出中共党、团、队”活动。图为法轮大法学员演炼功法。（陈柏州/大纪元）" width="600" b="400"
@@ -46,12 +46,12 @@
 <p>中共十八大前，由江泽民主导、曾庆红主谋、周永康凭借政法委第二权力中央负责实施，联合江系军中势力，意图推薄熙来上位，择机废掉习近平，另立中央。据报，该政变从2009年就已开始实施，但因王立军2012年2月出逃美领馆而全盘崩溃，薄熙来随后被抓。江派核心人物接连落马。</p>
 <p>习近平上台前后，据报，周永康曾至少2次试图暗杀习近平，包括在会议室放置定时炸弹和趁习到北京301医院体检时打毒针。</p>
 <p>截至目前，已有100多名“大老虎”落马，大部分是江派，其中包括周永康、徐才厚、苏荣三名副国级以上高官，周永康案将很快庭审；同时曾庆红、江泽民的多名心腹被捕，其家族丑闻不断曝光，江泽民之子江绵恒中科院上海分院院长职务也被免，当局的“打虎”运动逼近曾庆红、江泽民。</p>
-<p><h2>两亿中国人三退 <ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E8%A7%A3%E4%BD%93%E4%B8%AD%E5%85%B1.md#1">解体中共</a>逼近临界点</h2>
+<p><h2>两亿中国人三退 <ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%A7%A3%E4%BD%93%E4%B8%AD%E5%85%B1.md#1">解体中共</a>逼近临界点</h2>
 <figure id="attachment_5852310" aria-describedby="caption-attachment-5852310" style="width: 399px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/04/150425133059100590.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/04/150425133059100590.jpg" alt="香港法轮功学员4月25日举行纪念“四．二五”和平上访16周年及声援二亿人退出中共组织集会游行。八百人组成的游行队伍场面浩大，震撼了许多大陆游客，他们纷纷拿起相机拍照。（潘在殊/大纪元）" title="香港法轮功学员4月25日举行纪念“四．二五”和平上访16周年及声援二亿人退出中共组织集会游行。八百人组成的游行队伍场面浩大，震撼了许多大陆游客，他们纷纷拿起相机拍照。（潘在殊/大纪元）" width="399" b="599"
 	class="size-large wp-image-5852310" /></a><figcaption id="caption-attachment-5852310" class="wp-caption-text">香港法轮功学员4月25日举行纪念“四．二五”和平上访16周年及声援二亿人退出中共组织集会游行。八百人组成的游行队伍场面浩大，震撼了许多大陆游客，他们纷纷拿起相机拍照。（潘在殊/大纪元）</figcaption></figure>
 <p>全球上亿法轮功学员16年坚持不懈地讲真相，中共江泽民集团活摘法轮功学员器官的罪恶已全面曝光，尤其是2004年11月19日《大纪元时报》发表《九评》系列评论性文章，系统的阐述了中共的流氓起家史、杀人历史、暴政、邪教本质等，首次揭露了中共邪党是邪灵附体、是反宇宙的力量，中国民众知晓中共这个“西来幽灵”、邪魔后，纷纷选择退出其党、团、队组织（三退），到2015年4月14日，中国人在大纪元网上登记三退已突破两亿。</p>
 <p>“全球退党服务中心”主席易蓉说，自1999年“四?二五”和平上访以来，全球法轮功学员一直秉承着和平、理性地反迫害，推动了中国人退出中共党、团、队的精神觉醒运动，目前已有两亿中国人三退，中共妄想“三个月消灭法轮功”非但没有实现，反而把自己迫害倒了。</p>
-<p>美国海外著名民运人士、前六四学生、民主大学校长唐柏桥先生接受大纪元记者专访时表示，面对中共惨无人道的迫害，法轮功学员始终坚持和平理性反迫害，向全世界讲真相、传《九评》、劝“三退”就逐渐地在<ahref="https://github.com/fxhdff3615/djy/blob/master/gb/tag/%E8%A7%A3%E4%BD%93%E4%B8%AD%E5%85%B1.md#1">解体中共</a>。目前中共已是强弩之末，“法轮功学员为将来中国能和平过渡到一个没有共产党的新中国作出了巨大的贡献”。</p>
+<p>美国海外著名民运人士、前六四学生、民主大学校长唐柏桥先生接受大纪元记者专访时表示，面对中共惨无人道的迫害，法轮功学员始终坚持和平理性反迫害，向全世界讲真相、传《九评》、劝“三退”就逐渐地在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%A7%A3%E4%BD%93%E4%B8%AD%E5%85%B1.md#1">解体中共</a>。目前中共已是强弩之末，“法轮功学员为将来中国能和平过渡到一个没有共产党的新中国作出了巨大的贡献”。</p>
 <p>第一批声明退党的北大校友曾铮说，虽然共产党表面看似强大，要“道解”它却非常容易，因为邪灵总是要附着在人思想里、身体上，才能发挥作用。当人们声明退出中共，就在铲除中共邪灵，就是“道解中共”的过程。目前已有两亿多人“三退”，表明解体中共正在向临界点突破。</p>
 <p>责任编辑：孙芸</p>
 	
@@ -59,41 +59,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/6/8/n3889880.md#1">朱镕基批示被人扣压 “四二五”万人上访真相</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/14/4/27/n4141395.md#1">加拿大亚省法轮功学员纪念“四?二五”</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/14/4/28/n4141957.md#1">“四?二五”期间大陆多地出现真相标语</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/4/24/n4418894.md#1">直播：香港集会游行纪念4.25 声援2亿人三退</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/6/8/n3889880.md#1">朱镕基批示被人扣压 “四二五”万人上访真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/27/n4141395.md#1">加拿大亚省法轮功学员纪念“四?二五”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/4/28/n4141957.md#1">“四?二五”期间大陆多地出现真相标语</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/24/n4418894.md#1">直播：香港集会游行纪念4.25 声援2亿人三退</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11647719.md#1" target="_blank">钟声：“服从命令”与“终身追责”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/2/n11229916.md#1" target="_blank">制止强摘人体器官 全球立法行动知多少</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/31/n12847960.md#1">蒋经国回忆父亲过世的那段日子</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/6/n12862138.md#1">【未解之谜】“妈妈我记得你” 神奇的胎内记忆</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12871417.md#1">【拍案惊奇】拜登30天提6兆支出 台积电亟需水</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12871679.md#1">【探索时分】美军隐形航母杀手AGM-158C</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12871731.md#1">【小宇宙传说】鲜为人知的“移植记忆”故事</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869998.md#1">山东13岁女孩遭强暴案情节曲折 嫌犯被抓</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867846.md#1">【新闻看点】弗洛伊德案反转？台朝野誓死抗共</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870127.md#1">北京施压 马云创办的湖畔大学暂停招生</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867529.md#1">全昭旻无惧中共小粉红狙击 35岁生日晒Nike鞋</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870066.md#1">被刘若英直问从来没娱乐 刘德华发飙原因曝光</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867670.md#1">自曝遭刘嘉玲删微信好友 杨颖解释缘由引热议</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867956.md#1">拍杂志封面 范冰冰诠释三个不同年龄层容貌</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869071.md#1">林心如配戴上亿珠宝 4岁女儿爱卡通塑胶项链</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/8/n12867595.md#1">头顶有1大健脑穴位 每天按3分钟 远离失智失眠</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12870136.md#1">腰围3周减11公分！早上喝1杯瘦小腹 还让视力变好</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/3/31/n12849517.md#1">免疫力是最好的药 抗病毒抗菌秘密就在你体内</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/9/n12869106.md#1">听老牌空姐的话 搭机时别让头部靠着窗户</a></li>
-<li><a href="https://github.com/fxhdff3615/djy/blob/master/gb/21/4/10/n12870791.md#1">谷歌地图乱带路 害印尼男子差点娶错老婆</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fxhdff3615/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fxhdff3615/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/28/n4422014.htm">4.25上访拉开反迫害序幕 中共暴政走向解体</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/28/n4422014.htm">4.25上访拉开反迫害序幕 中共暴政走向解体</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fxhdff3615/djy/blob/master/gb/15/4/28/n4422014.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxhdff3615/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxhdff3615/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxhdff3615/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/15/4/28/n4422014.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
