--- a/gb/15/9/23/n4534323.md
+++ b/gb/15/9/23/n4534323.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>逾18万人血泪控告江泽民 11万诉状递达中共最高检</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2015/09/1509230755412192-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2015年09月23日讯】（大纪元记者叶枫综合报导）据明慧网最新统计，到本周9月22日为止，已超过十八万二千名海内外<ahref=http://www.minghui.org/mh/glossary.md#1#1><font color=#483D8B><ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a></font></a>学员及家人真名实姓向中共最高检察院、法院控<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E5%91%8A%E6%B1%9F.md#1">告江</a>泽民，敦促就<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>对<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的迫害罪行立案公诉。目前，至少十一万五千人的诉讼状递达中共最高检察机构。<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>状来自地区涵盖中国大陆所有33个省级行政区、330 个地级行政区、1,856个县级行政区以及海外28个国家。</p>
-<p><h2>18.2万人真名实姓控<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E5%91%8A%E6%B1%9F.md#1">告江</a>泽民</h2>
-<img src="https://i.epochtimes.com/assets/uploads/2015/09/1509230755412192-600x385.jpg" alt="" title="" width="600" b="385"
+	<p>【大纪元2015年09月23日讯】（大纪元记者叶枫综合报导）据明慧网最新统计，到本周9月22日为止，已超过十八万二千名海内外<ahref=http://www.minghui.org/mh/glossary.md#1#1><font color=#483D8B><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a></font></a>学员及家人真名实姓向中共最高检察院、法院控<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%8A%E6%B1%9F.md#1">告江</a>泽民，敦促就<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的迫害罪行立案公诉。目前，至少十一万五千人的诉讼状递达中共最高检察机构。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>状来自地区涵盖中国大陆所有33个省级行政区、330 个地级行政区、1,856个县级行政区以及海外28个国家。</p>
+<p><h2>18.2万人真名实姓控<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%8A%E6%B1%9F.md#1">告江</a>泽民</h2>
+<ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509230755412192-600x385.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509230755412192-600x385.jpg" alt="" title="" width="600" b="385"
 	class="size-large wp-image-6506284" /></a>
-<p>从5月底到9月22日，明慧网已收到总数182,379名（153,853案例）法轮功学员及家人递交给中共最高检察院、法院、公安部等相关部门的<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>状副本。8月22日至9月22日一月内，超过23,068人（20,504案例）递交控告状控告<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>。由于网络封锁和信息传输的不便，实际数字不止于此。</p>
+<p>从5月底到9月22日，明慧网已收到总数182,379名（153,853案例）法轮功学员及家人递交给中共最高检察院、法院、公安部等相关部门的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A.md#1">控告</a>状副本。8月22日至9月22日一月内，超过23,068人（20,504案例）递交控告状控告<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>。由于网络封锁和信息传输的不便，实际数字不止于此。</p>
 <p><h2>11.5万人控告状递达中共最高检察机构</h2>
-<img src="https://i.epochtimes.com/assets/uploads/2015/09/1509230755442192-600x407.jpg" alt="" title="" width="600" b="407"
+<ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509230755442192-600x407.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509230755442192-600x407.jpg" alt="" title="" width="600" b="407"
 	class="size-large wp-image-6506297" /></a>
-<p>尽管被中共610（中共法外组织，专职迫害法轮功）、地区国保、警察拦截和骚扰，法轮功学员们坚持不懈地努力， 通过邮寄、向官方网络电子投递方式，将控告状寄达相关部门。据明慧网部分统计，明慧网收到的总数为153,853份（182,379人）控告状副本中已有 95,999份（115,384人）得到最高检察院、最高法院签收或邮局妥投回复，平均签收率为62.4%。最近一月（8月22日至9月22日）投递 20,504份（23,068人）<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E8%AF%89%E6%B1%9F.md#1">诉江</a>状，有14,142份（15,749人）得到签收，签收率为69%。</p>
+<p>尽管被中共610（中共法外组织，专职迫害法轮功）、地区国保、警察拦截和骚扰，法轮功学员们坚持不懈地努力， 通过邮寄、向官方网络电子投递方式，将控告状寄达相关部门。据明慧网部分统计，明慧网收到的总数为153,853份（182,379人）控告状副本中已有 95,999份（115,384人）得到最高检察院、最高法院签收或邮局妥投回复，平均签收率为62.4%。最近一月（8月22日至9月22日）投递 20,504份（23,068人）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AF%89%E6%B1%9F.md#1">诉江</a>状，有14,142份（15,749人）得到签收，签收率为69%。</p>
 <p><h2>控告状覆盖中国大陆所有省份 以及海外28个国家和地区</h2>
 <p>控告状来自地区涵盖中国大陆所有33个省级行政区；330 个地级行政区（地级市、地区、自治州、盟），占全国地级行政区（约334个）的 99%；1,856个县级行政区（县、自治县、旗、自治旗、县级市、市辖区、林区、特区）。</p>
 <p>来海外28个国家和地区的2,054名法轮功学员向中共检察机构递交了控告江泽民的刑事控告书或自诉状。这些海外国家和地区包括：美国、加拿大、澳洲、韩 国、新西兰、泰国、日本、英国、马来西亚、德国、荷兰、瑞典、新加坡、法国、西班牙、印尼、爱尔兰、丹麦、台湾、芬兰、挪威、意大利、瑞士、波兰、罗马尼 亚、比利时、秘鲁、匈牙利。</p>
@@ -27,8 +27,8 @@
 <p>自今年5月以来，海内外发起控告江泽民大潮。这些控告人中，有一部分是至亲被迫害致死，有的甚至是多位亲人被迫害致死；有的怀孕妇女遭受酷刑胎死腹中，有的女性法轮功学员被强奸，被迫害致疯。这些受害人失去父母、失去丈夫、失去妻子、失去儿女、失去兄弟、失去姐妹、失去挚友的，很多人家破人亡、妻离子散、居无定所、流离失所、失业、破产、停学、失踪，甚至被活摘器官。他们的亲身经历令人颤栗。</p>
 <p><h2>丈夫被害死 尸检器官全摘空 妻子告江</h2>
 <p>明慧网八月二十四日消息，吉林省被迫害致死的李再亟的妻子祖春荣女士近日向北京最高检察院、北京最高法院控告江泽民害死了她的丈夫。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。李再亟遗体后背全是青紫色，左侧太阳穴塌陷，眼角还塞了纱布，纱布角露在外面。尸检后器官全部被摘走，赵姓警察声称“留做标本”。</p>
-<figure id="attachment_6506307" style="width: 470px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2015/09/1508241709392192.jpg" alt="吉林省吉林市法轮功学员李再亟。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。 （明慧网）" title="吉林省吉林市法轮功学员李再亟。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。 （明慧网）" width="470" b="596"
-	class="size-large wp-image-6506307" /></a><figcaption class="wp-caption-text">吉林省吉林市法轮功学员李再亟。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。 （明慧网）</figcaption></figure>
+<figure id="attachment_6506307" aria-describedby="caption-attachment-6506307" style="width: 470px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1508241709392192.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1508241709392192.jpg" alt="吉林省吉林市法轮功学员李再亟。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。 （明慧网）" title="吉林省吉林市法轮功学员李再亟。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。 （明慧网）" width="470" b="596"
+	class="size-large wp-image-6506307" /></a><figcaption id="caption-attachment-6506307" class="wp-caption-text">吉林省吉林市法轮功学员李再亟。二零零零年七月八日，李再亟被迫害致死，时年四十五岁。 （明慧网）</figcaption></figure>
 <p>在二零零零年七月，李再亟因为在劳教所长期遭受迫害，拉痢疾严重脱水。劳教所没有给他及时医治，导致病情加重。</p>
 <p>面对李再亟的严重病情，劳教所五十多岁的狱医李志刚指使几名劳教犯人把李再亟强行拖到水房，给其强行野蛮灌大量的浓盐水。当时李再亟拚命挣扎，整个大队的人几乎当时都听到水房里的“噗通”声。没过一会声音就停止了，接着大家看见大队警察纷纷跑进水房，用棉被把李再亟包上、抬走，说是到医院抢救，其实李再亟已当场被迫害致死。</p>
 <p>李再亟妻子祖春荣在控告状中说：“七月八日上午，我婆婆家接到通知说：李再亟有病在医院呢，婆婆和儿子没找我（因我在外当保姆）就到吉林市第三人民医院，看到我丈夫被停放在医院的走廊里，身上蒙着白纸，有警察看守不让到近前。下午被送到吉林市死亡鉴定中心。”</p>
@@ -41,8 +41,8 @@
 <p>明慧网报导，53岁的法轮功学员，女会计周永花家住山东新泰市，从一九九九年七月开始，迫害就在她身上发生了，二零零零年七月被绑架后，带着身孕，被河北井荆县刑警大队警察电棍、铁棍滚压折磨，从而婴儿胎死腹中。之后，又被非法劳教迫害。二零一五年七月十五日，周永花依法向最高检察院和法院起诉迫害元凶江泽民。</p>
 <p>由于媒体天天栽赃陷害法轮大法，污蔑法轮大法创始人，为了还师父清白，还法轮大法清白，二零零零年七月中旬，我到北京上访，向国家领导人说明法轮大法的真 实情况，行使宪法赋予公民上访的权利，结果被绑架到北京门头沟派出所。在那里，被强迫蹲在地上，警察轮番看着，两天两夜没让合眼，困得实在撑不住，刚一合 眼，即被警察踹醒，或大喊一声吓醒，到后半夜两三点钟人最困乏的时候进行审讯，遭到“蹲马步”、“开飞机”（惩罚人的一种姿势）、拳打、脚踢、威胁等逼供。</p>
 <p>周永花在控告书中说：“因到北京上访的人太多，我和几个大法弟子被转到河北井荆县刑警大队。刚到那里，被带到一个屋子里，一个人上来就打了我几个嘴巴子，到了晚上，把我带到大一点的屋子里，来了十几个人，让我跪在地上，左右两侧分别有人把着我的胳膊、手，拽着我的头发，还有人用电棍电击我的后背、脖子、脸部，更残忍的是，他们将 一根铁棍（感觉是，因动弹不得，没有看到）放到我的腿上，然后有人踩在铁棍上，像擀面一样来回滚压，他们累了就休息一下，把电棍充上电，然后再电我、滚压 我的双腿，他们累了再休息一下，把电棍再充上电，再电我、滚压我的双腿。”</p>
-<figure id="attachment_6495034" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2015/09/1509101046012382-600x450.jpg" alt="演示图：电棍电击以强制“转化”（明慧网）" title="演示图：电棍电击以强制“转化”（明慧网）" width="600" b="450"
-	class="size-large wp-image-6495034" /></a><figcaption class="wp-caption-text">演示图：电棍电击以强制“转化”（明慧网）</figcaption></figure>
+<figure id="attachment_6495034" aria-describedby="caption-attachment-6495034" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2015/09/1509101046012382-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2015/09/1509101046012382-600x450.jpg" alt="演示图：电棍电击以强制“转化”（明慧网）" title="演示图：电棍电击以强制“转化”（明慧网）" width="600" b="450"
+	class="size-large wp-image-6495034" /></a><figcaption id="caption-attachment-6495034" class="wp-caption-text">演示图：电棍电击以强制“转化”（明慧网）</figcaption></figure>
 <p>“那时我还怀有身孕，就被这样折磨……因我坚持的是佛法真理，按“真、善、忍”要求做个好人绝对没错，没有屈服他们，有人说不行就灌辣椒水。以前在文艺作品里看到的法西斯手段，在江泽民‘名誉 上搞臭，经济上截断，肉体上消灭”、‘打死白打，打死算自杀’、‘不查身源，直接火化’的群体灭绝政策下，全都用在了大法弟子身上，而且有过之而无不及。 当时我的双腿被他们用铁棍滚压得像熟了一样，第二天，腿、脚全都变成紫茄子颜色，肿得像发面馒头一样，脚其它什么鞋都穿不上，只能穿一最大号男士拖鞋，上 厕所腿都无法下蹲。”</p>
 <p>“七天后，我被通化团结派出所警察接回通化，直接关在看守所。那里的狱医看到我的腿说，如果破一点皮，我的双腿会全部烂掉，当时接我的警察也说我的腿肯定会 留下后遗症（残疾）。因怀着身孕，在北京、河北被酷刑折磨，下身像血崩一样开始大流血，一个多月后，被保外放回家。回家不久，便流产，因流血过多，两眼曾什么也看不见，全身一点力气也没有，吃一口饭就得歇一会儿……”</p>
 <p><h2>法轮功学员遭逾百种酷刑折磨</h2>
@@ -55,45 +55,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/20/n4531541.md#1">欧洲法轮功学员维也纳声援起诉江泽民</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/19/n4531044.md#1">母修炼 儿被“顶罪”冤狱3年 孙连英告江</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/19/n4531032.md#1">女儿遭强制堕胎及判刑 75岁老母告江</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/17/n4530131.md#1">遭开枪追捕 酷刑折磨 张世江九死一生</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/17/n4530014.md#1">浙江宁波市79人控告江泽民</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/17/n4529291.md#1">被非法关押11年 退役军人控告江泽民</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/17/n4529289.md#1">女儿被输不明药物毒死 78岁老父告江</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/17/n4529271.md#1">山东教师亓廷松被迫害致死 家人告江</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/9/12/n4526134.md#1">管戈被酷刑致死十二载 老母亲诉江</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/8/21/n4509038.md#1">“逮捕江泽民” 欧美澳世界政要声援告江大潮</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/9/16/n4529016.md#1">美国会诉江研讨会 律师界发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/9/19/n4531032.md#1">女儿遭强制堕胎及判刑 75岁老母告江</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/9/19/n4531524.md#1">美国会听证 要求在奥习会提出停止迫害法轮功等问题</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/4/16/n11190396.md#1">钟声：朋友，您可听到了历史的脚步声？</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280593.md#1" target="_blank">观雨堂主：吴晗——不止是个人的悲哀</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948127.md#1">【现场视频】哈尔滨民众：刚解封咋又封了？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948100.md#1">【现场视频】富士康上千工人维权 遭警驱赶</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/23/n4534323.htm">逾18万人血泪控告江泽民 11万诉状递达中共最高检</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/9/23/n4534323.htm">逾18万人血泪控告江泽民 11万诉状递达中共最高检</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/15/9/23/n4534323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/15/9/23/n4534323.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
